--- a/Wavefront.CSharp.SDK/Wavefront.CSharp.SDK.csproj
+++ b/Wavefront.CSharp.SDK/Wavefront.CSharp.SDK.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackOnBuild>true</PackOnBuild>
     <PackageId>Wavefront.CSharp.SDK</PackageId>
-    <PackageVersion>0.2.0</PackageVersion>
+    <PackageVersion>0.3.0-alpha</PackageVersion>
     <Authors>Han Zhang</Authors>
     <Description>This package provides support for sending metrics, histograms and opentracing spans to Wavefront via proxy or direct ingestion.</Description>
   </PropertyGroup>
