--- a/Wavefront.CSharp.SDK/Wavefront.CSharp.SDK.csproj
+++ b/Wavefront.CSharp.SDK/Wavefront.CSharp.SDK.csproj
@@ -5,7 +5,7 @@
     <PackOnBuild>true</PackOnBuild>
     <PackageId>Wavefront.CSharp.SDK</PackageId>
     <PackageVersion>0.3.2-alpha</PackageVersion>
-    <Authors>Han Zhang</Authors>
+    <Authors>Wavefront</Authors>
     <Description>This package provides support for sending metrics, histograms and opentracing spans to Wavefront via proxy or direct ingestion.</Description>
   </PropertyGroup>
 
