Han/refactoring and aspnetcore updates (#8)
* Changed WavefrontClient to IWavefrontSender and added ability to disable flushing on interval

* Formatting; removed IWavefrontSender method that is no longer needed

* Fixed bug in direct injection client; added Wavefront histogram

* Added unit tests for Wavefront histogram

* Update unit tests and TDigest accuracy for Wavefront histograms

* Minor change to unit test

* Formatting; removed IWavefrontSender method that is no longer needed

* Fixed bug in direct injection client; added Wavefront histogram

* Added unit tests for Wavefront histogram

* Update unit tests and TDigest accuracy for Wavefront histograms

* Minor change to unit test

* Update Wavefront Histogram for thread safety

* New implementation of Wavefront Histogram

* Add ApplicationTags and HeartbeaterService; Rename everything to Wavefront.SDK.CSharp; Enable WavefrontHistogram for ASP.NET Core SDK

* Update solution name in travis

* Update README header

* Added doc for ApplicationTags

* Update readme and docs

* Minor changes to docs

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: csharp
-solution: Wavefront-CSharp-SDK.sln
+solution: Wavefront.SDK.CSharp.sln
 mono: none
 dotnet: 2.1.300
 
@@ -8,4 +8,4 @@ install:
 
 script:
  - dotnet build
- - dotnet test Wavefront.CSharp.SDK.Test/Wavefront.CSharp.SDK.Test.csproj
+ - dotnet test Wavefront.SDK.CSharp.Test/Wavefront.SDK.CSharp.Test.csproj
