--- a/Wavefront.SDK.CSharp/Wavefront.SDK.CSharp.csproj
+++ b/Wavefront.SDK.CSharp/Wavefront.SDK.CSharp.csproj
@@ -4,7 +4,7 @@
     <PackOnBuild>true</PackOnBuild>
     <NoWarn>NU1701</NoWarn>
     <PackageId>Wavefront.SDK.CSharp</PackageId>
-    <PackageVersion>1.0</PackageVersion>
+    <PackageVersion>1.0.1</PackageVersion>
     <Title>Wavefront by VMware SDK for C#</Title>
     <Authors>Wavefront</Authors>
     <Description>This package provides support for sending metrics, histograms and opentracing spans to Wavefront via proxy or direct ingestion.</Description>
@@ -23,6 +23,7 @@
     <Folder Include="Entities\Histograms\" />
     <Folder Include="Entities\Metrics\" />
     <Folder Include="Entities\Tracing\" />
+    <Folder Include="Entities\Tracing\Sampling\" />
     <Folder Include="Proxy\" />
   </ItemGroup>
   <ItemGroup>
