--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,13 @@ solution: Wavefront.SDK.CSharp.sln
 mono: none
 dotnet: 2.1.300
 
+before_install:
+  - sudo apt-get install dotnet-sdk-3.1
+
 install:
  - dotnet restore
 
 script:
  - dotnet build
- - dotnet test Wavefront.SDK.CSharp.Test/Wavefront.SDK.CSharp.Test.csproj
+ - dotnet test Wavefront.SDK.CSharp.Test/Wavefront.SDK.CSharp.Test.csproj -f netcoreapp2.1
+ - dotnet test Wavefront.SDK.CSharp.Test/Wavefront.SDK.CSharp.Test.csproj -f netcoreapp3.1
