--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ mono: none
 dotnet: 2.1.300
 
 before_install:
-  - sudo apt-get install dotnet-sdk-3.1
+  - sudo apt-get install -y dotnet-sdk-5.0
 
 install:
  - dotnet restore
