--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,11 @@ mono: none
 dotnet: 2.1.300
 
 before_install:
-  - sudo apt-get install dotnet-sdk-3.1
+  - sudo apt-get install -y dotnet-sdk-5.0
 
 install:
  - dotnet restore
 
 script:
  - dotnet build
- - dotnet test Wavefront.SDK.CSharp.Test/Wavefront.SDK.CSharp.Test.csproj -f netcoreapp2.1
- - dotnet test Wavefront.SDK.CSharp.Test/Wavefront.SDK.CSharp.Test.csproj -f netcoreapp3.1
+ - dotnet test Wavefront.SDK.CSharp.Test/Wavefront.SDK.CSharp.Test.csproj
