--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,6 +21,8 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: ${{ matrix.dotnet-version }}
+    - name: Install 5.0 sdk
+      run: sudo apt-get install -y dotnet-sdk-5.0
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
